[package]
name = "kvm-bindings"
version = "0.5.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]
description = "Rust FFI bindings to KVM generated using bindgen."
repository = "https://github.com/rust-vmm/kvm-bindings"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0"

[features]
fam-wrappers = ["vmm-sys-util"]

[dependencies]
vmm-sys-util = { version = ">=0.8.0", optional = true }

versionize = { git = "https://github.com/firecracker-microvm/versionize", tag = "v0.1.0" }
versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive", tag = "v0.1.0" }
